fixed add post container responsiveness on small screen devices

--- a/src/components/add-post/add-post-form.scss
+++ b/src/components/add-post/add-post-form.scss
@@ -1,5 +1,11 @@
 @use "../../index.scss";
 
+@media (max-width: 564px) {
+    .add-post-container {
+        width: 100vmin;
+    }
+}
+
 .add-post-container {
     @extend .background-white;
     box-sizing: border-box;
