--- a/src/components/post/posts.scss
+++ b/src/components/post/posts.scss
@@ -1,3 +1,9 @@
+@media (max-width: 564px) {
+    .main-page {
+        width: 100vmin;
+    }
+}
+
 .main-page {
     width: 564px;
 }
